@@ -5,7 +5,9 @@ import java.io.DataInputStream;
 import java.io.IOException;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
+import java.time.format.DateTimeParseException;
 import java.util.Arrays;
+import java.util.Calendar;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Date;
@@ -22,6 +24,7 @@ import java.util.TreeMap;
 import java.util.TreeSet;
 import java.util.concurrent.ExecutionException;
 
+import datawave.iterators.FrequencyMetadataAggregator;
 import org.apache.accumulo.core.client.AccumuloClient;
 import org.apache.accumulo.core.client.IteratorSetting;
 import org.apache.accumulo.core.client.Scanner;
@@ -32,6 +35,7 @@ import org.apache.accumulo.core.data.Value;
 import org.apache.accumulo.core.iterators.user.RegExFilter;
 import org.apache.accumulo.core.iterators.user.SummingCombiner;
 import org.apache.accumulo.core.security.Authorizations;
+import org.apache.commons.lang3.builder.ToStringBuilder;
 import org.apache.commons.lang3.tuple.Pair;
 import org.apache.hadoop.io.Text;
 import org.apache.hadoop.io.WritableUtils;
@@ -55,6 +59,7 @@ import com.google.common.collect.Sets;
 
 import datawave.data.ColumnFamilyConstants;
 import datawave.data.type.Type;
+import datawave.data.type.TypeFactory;
 import datawave.query.composite.CompositeMetadata;
 import datawave.query.composite.CompositeMetadataHelper;
 import datawave.query.model.DateFrequencyMap;
@@ -72,14 +77,15 @@ public class AllFieldMetadataHelper {
     
     public static final String NULL_BYTE = "\0";
     
-    protected static final Function<MetadataEntry,String> toFieldName = new MetadataEntryToFieldName(), toDatatype = new MetadataEntryToDatatype();
+    protected static final Function<MetadataEntry,String> toFieldName = new MetadataEntryToFieldName();
+    protected static final Function<MetadataEntry,String> toDatatype = new MetadataEntryToDatatype();
     
     protected final Metadata metadata = new Metadata();
     
     protected final List<Text> metadataIndexColfs = Arrays.asList(ColumnFamilyConstants.COLF_I, ColumnFamilyConstants.COLF_RI);
-    protected final List<Text> metadataNormalizedColfs = Arrays.asList(ColumnFamilyConstants.COLF_N);
-    protected final List<Text> metadataTypeColfs = Arrays.asList(ColumnFamilyConstants.COLF_T);
-    protected final List<Text> metadataCompositeIndexColfs = Arrays.asList(ColumnFamilyConstants.COLF_CI);
+    protected final List<Text> metadataNormalizedColfs = List.of(ColumnFamilyConstants.COLF_N);
+    protected final List<Text> metadataTypeColfs = List.of(ColumnFamilyConstants.COLF_T);
+    protected final List<Text> metadataCompositeIndexColfs = List.of(ColumnFamilyConstants.COLF_CI);
     
     protected final AccumuloClient accumuloClient;
     protected final String metadataTableName;
@@ -88,6 +94,10 @@ public class AllFieldMetadataHelper {
     
     protected final TypeMetadataHelper typeMetadataHelper;
     protected final CompositeMetadataHelper compositeMetadataHelper;
+    
+    private int typeCacheSize = -1;
+    private int typeCacheExpirationInMinutes = -1;
+    protected TypeFactory typeFactory = null;
     
     /**
      * Initializes the instance with a provided update interval.
@@ -122,6 +132,13 @@ public class AllFieldMetadataHelper {
         log.trace("Constructor  connector: {} and metadata table name: {}", accumuloClient.getClass().getCanonicalName(), metadataTableName);
     }
     
+    /**
+     * Get the datatype from a key's column qualifier
+     *
+     * @param k
+     *            the key
+     * @return the datatype
+     */
     protected String getDatatype(Key k) {
         String datatype = k.getColumnQualifier().toString();
         int index = datatype.indexOf('\0');
@@ -131,8 +148,14 @@ public class AllFieldMetadataHelper {
         return datatype;
     }
     
+    /**
+     * Get the field name from a composite key
+     *
+     * @param k
+     *            the key
+     * @return the field name
+     */
     protected String getCompositeFieldName(Key k) {
-        Text colq = k.getColumnQualifier();
         String compositeFieldName = k.getColumnQualifier().toString();
         int index = compositeFieldName.indexOf('\0');
         if (index >= 0) {
@@ -145,37 +168,62 @@ public class AllFieldMetadataHelper {
         return compositeFieldName;
     }
     
+    /**
+     * Get the authorizations used by this helper
+     *
+     * @return the authorizations
+     */
     public Set<Authorizations> getAuths() {
         return auths;
     }
     
+    /**
+     * Get the full user authorizations used by this helper
+     *
+     * @return the full user authorizations
+     */
     public Set<Authorizations> getFullUserAuths() {
         return fullUserAuths;
     }
     
+    /**
+     * Get the metadata table name
+     *
+     * @return the metadata table name
+     */
     public String getMetadataTableName() {
         return metadataTableName;
     }
     
+    /**
+     * Get the {@link TypeMetadataHelper}
+     *
+     * @return the TypeMetadataHelper
+     */
     public TypeMetadataHelper getTypeMetadataHelper() {
         return typeMetadataHelper;
     }
     
     /**
-     * Method that determines whether or not a column exists in the metadata table for the given key.
+     * Method that determines whether a column exists in the metadata table for the given key.
      * 
      * @param colf
+     *            the column family
      * @param key
-     * @return
+     *            the key, an Entry of table name, field, and ingest types
+     * @return true if the key exists in the metadata table
      * @throws TableNotFoundException
+     *             if no table exists
      * @throws InstantiationException
+     *             not thrown, remove
      * @throws ExecutionException
+     *             not thrown, remove
      */
     @Cacheable(value = "isIndexed", key = "{#root.target.auths,#root.target.metadataTableName,#colf,#key}", cacheManager = "metadataHelperCacheManager",
                     sync = true)
     // using cache with higher maximumSize
     public Boolean isIndexed(Text colf, Entry<String,Entry<String,Set<String>>> key) throws TableNotFoundException, InstantiationException, ExecutionException {
-        log.debug("cache fault for isIndexed(" + this.auths + "," + this.metadataTableName + "," + colf + "," + key + ")");
+        log.debug("cache fault for isIndexed({}, {}, {}, {})", this.auths, this.metadataTableName, colf, key);
         Preconditions.checkNotNull(key);
         
         final String tableName = key.getKey();
@@ -184,21 +232,25 @@ public class AllFieldMetadataHelper {
         
         Preconditions.checkNotNull(fieldName);
         
-        // FieldNames are "normalized" to be all upper case
+        // FieldNames are upper case by convention
         String upCaseFieldName = fieldName.toUpperCase();
         
         // Scanner to the provided metadata table
-        Scanner scanner = ScannerHelper.createScanner(accumuloClient, tableName, auths);
-        
-        Range range = new Range(upCaseFieldName);
-        scanner.setRange(range);
-        scanner.fetchColumnFamily(colf);
-        
-        boolean result = false;
-        for (Entry<Key,Value> entry : scanner) {
-            // Get the column qualifier from the key. It contains the ingesttype
-            // and datatype class
-            if (null != entry.getKey().getColumnQualifier()) {
+        try (Scanner scanner = ScannerHelper.createScanner(accumuloClient, tableName, auths)) {
+            
+            Range range = new Range(upCaseFieldName);
+            scanner.setRange(range);
+            scanner.fetchColumnFamily(colf);
+            
+            for (Entry<Key,Value> entry : scanner) {
+                
+                if (entry.getKey().getColumnQualifier() == null) {
+                    log.warn("ColumnQualifier null in ColumnFamilyConstants for key: {}", entry.getKey());
+                    continue;
+                }
+                
+                // Get the column qualifier from the key. It contains the ingest type
+                // and datatype class
                 String colq = entry.getKey().getColumnQualifier().toString();
                 
                 // there should not be a null byte and Normalizer class in the 'i' entry for version3+
@@ -210,46 +262,47 @@ public class AllFieldMetadataHelper {
                 // If types are specified and this type is not in the list,
                 // skip it.
                 if (datatype == null || datatype.isEmpty() || datatype.contains(colq)) {
-                    result = true;
-                    break;
+                    return true;
                 }
-            } else {
-                log.warn("ColumnQualifier null in ColumnFamilyConstants for key: " + entry.getKey());
             }
         }
-        return result;
+        return false;
     }
     
     /**
      * Returns a Set of all Types in use by any type in Accumulo
      * 
-     * @return
+     * @return the set of all {@link Type}s
      * @throws InstantiationException
+     *             if a Type cannot be created
      * @throws IllegalAccessException
+     *             if a Type cannot be created
      * @throws TableNotFoundException
+     *             if no table exists
      */
     @Cacheable(value = "getAllDatatypes", key = "{#root.target.auths,#root.target.metadataTableName}", cacheManager = "metadataHelperCacheManager")
     public Set<Type<?>> getAllDatatypes() throws InstantiationException, IllegalAccessException, TableNotFoundException {
-        log.debug("cache fault for getAllDatatypes(" + this.auths + "," + this.metadataTableName + ")");
-        Set<Type<?>> datatypes = Sets.newHashSetWithExpectedSize(10);
-        if (log.isTraceEnabled())
-            log.trace("getAllDatatypes from table: " + metadataTableName);
-        Scanner bs = ScannerHelper.createScanner(accumuloClient, metadataTableName, auths);
-        Range range = new Range();
+        log.debug("cache fault for getAllDatatypes({}, {})", this.auths, this.metadataTableName);
         
-        bs.setRange(range);
-        
-        // Fetch all of the index columns
-        for (Text colf : metadataTypeColfs) {
-            bs.fetchColumnFamily(colf);
+        if (log.isTraceEnabled()) {
+            log.trace("getAllDatatypes from table: {}", metadataTableName);
         }
         
-        for (Entry<Key,Value> entry : bs) {
-            Key key = entry.getKey();
+        Set<Type<?>> datatypes = Sets.newHashSetWithExpectedSize(10);
+        
+        try (Scanner bs = ScannerHelper.createScanner(accumuloClient, metadataTableName, auths)) {
+            bs.setRange(new Range());
+            bs.fetchColumnFamily(ColumnFamilyConstants.COLF_T);
             
-            // Get the column qualifier from the key. It contains the
-            // datatype and normalizer class
-            if (null != key.getColumnQualifier()) {
+            for (Entry<Key,Value> entry : bs) {
+                Key key = entry.getKey();
+                
+                if (key.getColumnQualifier() == null) {
+                    log.warn("ColumnQualifier null in EventMetadata for key: {}", key);
+                }
+                
+                // Get the column qualifier from the key. It contains the
+                // datatype and normalizer class
                 String colq = key.getColumnQualifier().toString();
                 int idx = colq.indexOf(NULL_BYTE);
                 if (idx != -1) {
@@ -259,19 +312,15 @@ public class AllFieldMetadataHelper {
                         
                         datatypes.add(getDatatypeFromClass(clazz));
                     } catch (ClassNotFoundException e) {
-                        log.error("Unable to find normalizer on class path: " + colq.substring(idx + 1), e);
+                        log.error("Unable to find normalizer on class path: {}", colq.substring(idx + 1), e);
                     }
                 } else {
-                    log.warn("ColumnFamilyConstants entry did not contain a null byte in the column qualifier: " + key);
-                    
+                    log.warn("ColumnFamilyConstants entry did not contain a null byte in the column qualifier: {}", key);
                 }
-            } else {
-                log.warn("ColumnQualifier null in EventMetadata for key: " + key);
             }
         }
         
         return Collections.unmodifiableSet(datatypes);
-        
     }
     
     /**
@@ -280,33 +329,43 @@ public class AllFieldMetadataHelper {
      * 
      * @return An unmodifiable Multimap
      * @throws TableNotFoundException
+     *             if no table exists
      */
     @Cacheable(value = "getCompositeToFieldMap", key = "{#root.target.auths,#root.target.metadataTableName}", cacheManager = "metadataHelperCacheManager")
     public Multimap<String,String> getCompositeToFieldMap() throws TableNotFoundException {
-        log.debug("cache fault for getCompositeToFieldMap(" + this.auths + "," + this.metadataTableName + ")");
+        log.debug("cache fault for getCompositeToFieldMap({}, {})", this.auths, this.metadataTableName);
         return this.getCompositeToFieldMap(null);
     }
     
+    /**
+     * A map of composite name to the ordered list of it for example, mapping of {@code COLOR -> ['COLOR_WHEELS', 'MAKE_COLOR' ]}. If called multiple time, it
+     * returns the same cached map.
+     *
+     * @param ingestTypeFilter
+     *            the set of ingest types used to filter the scan
+     * @return the multimap of field to composite fields
+     * @throws TableNotFoundException
+     *             if no table exists
+     */
     @Cacheable(value = "getCompositeToFieldMap", key = "{#root.target.auths,#root.target.metadataTableName,#ingestTypeFilter}",
                     cacheManager = "metadataHelperCacheManager")
     public Multimap<String,String> getCompositeToFieldMap(Set<String> ingestTypeFilter) throws TableNotFoundException {
-        log.debug("cache fault for getCompositeToFieldMap(" + this.auths + "," + this.metadataTableName + "," + ingestTypeFilter + ")");
+        log.debug("cache fault for getCompositeToFieldMap({}, {}, {})", this.auths, this.metadataTableName, ingestTypeFilter);
         
         ArrayListMultimap<String,String> compositeToFieldMap = ArrayListMultimap.create();
         
-        Scanner bs = ScannerHelper.createScanner(accumuloClient, metadataTableName, auths);
-        Range range = new Range();
-        
-        bs.setRange(range);
-        
-        // Fetch all of the index columns
-        for (Text colf : this.metadataCompositeIndexColfs) {
-            bs.fetchColumnFamily(colf);
-        }
-        
-        for (Entry<Key,Value> entry : bs) {
-            String fieldName = entry.getKey().getRow().toString();
-            if (null != entry.getKey().getColumnQualifier()) {
+        try (Scanner bs = ScannerHelper.createScanner(accumuloClient, metadataTableName, auths)) {
+            bs.setRange(new Range());
+            bs.fetchColumnFamily(ColumnFamilyConstants.COLF_CI);
+            
+            for (Entry<Key,Value> entry : bs) {
+                String fieldName = entry.getKey().getRow().toString();
+                
+                if (entry.getKey().getColumnQualifier() == null) {
+                    log.warn("ColumnQualifier null in EventMetadata for key: {}", entry.getKey());
+                    continue;
+                }
+                
                 String colq = entry.getKey().getColumnQualifier().toString();
                 int idx = colq.indexOf(NULL_BYTE);
                 
@@ -322,10 +381,8 @@ public class AllFieldMetadataHelper {
                     String[] componentFields = colq.substring(idx + 1).split(",");
                     compositeToFieldMap.putAll(fieldName, Arrays.asList(componentFields));
                 } else {
-                    log.warn("EventMetadata entry did not contain a null byte in the column qualifier: " + entry.getKey());
+                    log.warn("EventMetadata entry did not contain a null byte in the column qualifier: {}", entry.getKey());
                 }
-            } else {
-                log.warn("ColumnQualifier null in EventMetadata for key: " + entry.getKey());
             }
         }
         
@@ -337,33 +394,45 @@ public class AllFieldMetadataHelper {
      *
      * @return An unmodifiable Map
      * @throws TableNotFoundException
+     *             if no table exists
      */
     @Cacheable(value = "getCompositeTransitionDateMap", key = "{#root.target.auths,#root.target.metadataTableName}",
                     cacheManager = "metadataHelperCacheManager")
     public Map<String,Date> getCompositeTransitionDateMap() throws TableNotFoundException {
-        log.debug("cache fault for getCompositeTransitionDateMap(" + this.auths + "," + this.metadataTableName + ")");
+        log.debug("cache fault for getCompositeTransitionDateMap({}, {})", this.auths, this.metadataTableName);
         return this.getCompositeTransitionDateMap(null);
     }
+    
+    /**
+     * A map of composite name to transition date.
+     *
+     * @param ingestTypeFilter
+     *            the set of ingest types used to filter the scan
+     * @return An unmodifiable Map
+     * @throws TableNotFoundException
+     *             if no table exists
+     */
     
     @Cacheable(value = "getCompositeTransitionDateMap", key = "{#root.target.auths,#root.target.metadataTableName,#ingestTypeFilter}",
                     cacheManager = "metadataHelperCacheManager")
     public Map<String,Date> getCompositeTransitionDateMap(Set<String> ingestTypeFilter) throws TableNotFoundException {
-        log.debug("cache fault for getCompositeTransitionDateMap(" + this.auths + "," + this.metadataTableName + "," + ingestTypeFilter + ")");
+        log.debug("cache fault for getCompositeTransitionDateMap({}, {}, {})", this.auths, this.metadataTableName, ingestTypeFilter);
         
         Map<String,Date> tdMap = new HashMap<>();
         
         SimpleDateFormat dateFormat = new SimpleDateFormat(CompositeMetadataHelper.transitionDateFormat);
         
-        Scanner bs = ScannerHelper.createScanner(accumuloClient, metadataTableName, auths);
-        Range range = new Range();
-        
-        bs.setRange(range);
-        
-        bs.fetchColumnFamily(ColumnFamilyConstants.COLF_CITD);
-        
-        for (Entry<Key,Value> entry : bs) {
-            String fieldName = entry.getKey().getRow().toString();
-            if (null != entry.getKey().getColumnQualifier()) {
+        try (Scanner bs = ScannerHelper.createScanner(accumuloClient, metadataTableName, auths)) {
+            bs.setRange(new Range());
+            bs.fetchColumnFamily(ColumnFamilyConstants.COLF_CITD);
+            
+            for (Entry<Key,Value> entry : bs) {
+                
+                if (entry.getKey().getColumnQualifier() == null) {
+                    log.warn("ColumnQualifier null in EventMetadata for key: {}", entry.getKey());
+                    continue;
+                }
+                
                 String colq = entry.getKey().getColumnQualifier().toString();
                 int idx = colq.indexOf(NULL_BYTE);
                 
@@ -377,16 +446,15 @@ public class AllFieldMetadataHelper {
                 
                 if (idx != -1) {
                     try {
+                        String fieldName = entry.getKey().getRow().toString();
                         Date transitionDate = dateFormat.parse(colq.substring(idx + 1));
                         tdMap.put(fieldName, transitionDate);
                     } catch (ParseException e) {
                         log.trace("Unable to parse composite field transition date", e);
                     }
                 } else {
-                    log.warn("EventMetadata entry did not contain a null byte in the column qualifier: " + entry.getKey());
+                    log.warn("EventMetadata entry did not contain a null byte in the column qualifier: {}", entry.getKey());
                 }
-            } else {
-                log.warn("ColumnQualifier null in EventMetadata for key: " + entry.getKey());
             }
         }
         
@@ -398,33 +466,44 @@ public class AllFieldMetadataHelper {
      *
      * @return An unmodifiable Map
      * @throws TableNotFoundException
+     *             if no table exists
      */
     @Cacheable(value = "getWhindexCreationDateMap", key = "{#root.target.auths,#root.target.metadataTableName}", cacheManager = "metadataHelperCacheManager")
     public Map<String,Date> getWhindexCreationDateMap() throws TableNotFoundException {
-        log.debug("cache fault for getWhindexCreationDateMap(" + this.auths + "," + this.metadataTableName + ")");
+        log.debug("cache fault for getWhindexCreationDateMap({}, {})", this.auths, this.metadataTableName);
         return this.getWhindexCreationDateMap(null);
     }
     
+    /**
+     * A map of whindex field to creation date.
+     *
+     * @param ingestTypeFilter
+     *            set of ingest types used to filter the scan
+     * @return An unmodifiable Map
+     * @throws TableNotFoundException
+     *             if no table exists
+     */
     @Cacheable(value = "getWhindexCreationDateMap", key = "{#root.target.auths,#root.target.metadataTableName,#ingestTypeFilter}",
                     cacheManager = "metadataHelperCacheManager")
     public Map<String,Date> getWhindexCreationDateMap(Set<String> ingestTypeFilter) throws TableNotFoundException {
-        log.debug("cache fault for getWhindexCreationDateMap(" + this.auths + "," + this.metadataTableName + "," + ingestTypeFilter + ")");
+        log.debug("cache fault for getWhindexCreationDateMap({}, {}, {})", this.auths, this.metadataTableName, ingestTypeFilter);
         
         Map<String,Date> tdMap = new HashMap<>();
         
         // Note: Intentionally using the same transition date format as the composite fields.
         SimpleDateFormat dateFormat = new SimpleDateFormat(CompositeMetadataHelper.transitionDateFormat);
         
-        Scanner bs = ScannerHelper.createScanner(accumuloClient, metadataTableName, auths);
-        Range range = new Range();
-        
-        bs.setRange(range);
-        
-        bs.fetchColumnFamily(ColumnFamilyConstants.COLF_WCD);
-        
-        for (Entry<Key,Value> entry : bs) {
-            String fieldName = entry.getKey().getRow().toString();
-            if (null != entry.getKey().getColumnQualifier()) {
+        try (Scanner bs = ScannerHelper.createScanner(accumuloClient, metadataTableName, auths)) {
+            bs.setRange(new Range());
+            bs.fetchColumnFamily(ColumnFamilyConstants.COLF_WCD);
+            
+            for (Entry<Key,Value> entry : bs) {
+                
+                if (entry.getKey().getColumnQualifier() == null) {
+                    log.warn("ColumnQualifier null in EventMetadata for key: {}", entry.getKey());
+                    continue;
+                }
+                
                 String colq = entry.getKey().getColumnQualifier().toString();
                 int idx = colq.indexOf(NULL_BYTE);
                 
@@ -438,16 +517,15 @@ public class AllFieldMetadataHelper {
                     }
                     
                     try {
+                        String fieldName = entry.getKey().getRow().toString();
                         Date transitionDate = dateFormat.parse(colq.substring(idx + 1));
                         tdMap.put(fieldName, transitionDate);
                     } catch (ParseException e) {
                         log.trace("Unable to parse whindex field creation date", e);
                     }
                 } else {
-                    log.warn("EventMetadata entry did not contain a null byte in the column qualifier: " + entry.getKey());
+                    log.warn("EventMetadata entry did not contain a null byte in the column qualifier: {}", entry.getKey());
                 }
-            } else {
-                log.warn("ColumnQualifier null in EventMetadata for key: " + entry.getKey());
             }
         }
         
@@ -459,31 +537,42 @@ public class AllFieldMetadataHelper {
      *
      * @return An unmodifiable Map
      * @throws TableNotFoundException
+     *             if no table exists
      */
     @Cacheable(value = "getCompositeFieldSeparatorMap", key = "{#root.target.auths,#root.target.metadataTableName}",
                     cacheManager = "metadataHelperCacheManager")
     public Map<String,String> getCompositeFieldSeparatorMap() throws TableNotFoundException {
-        log.debug("cache fault for getCompositeFieldSeparatorMap(" + this.auths + "," + this.metadataTableName + ")");
+        log.debug("cache fault for getCompositeFieldSeparatorMap({}, {})", this.auths, this.metadataTableName);
         return this.getCompositeFieldSeparatorMap(null);
     }
     
+    /**
+     * A map of composite name to field separator.
+     *
+     * @param ingestTypeFilter
+     *            set of ingest types used to filter the scan
+     * @return An unmodifiable Map
+     * @throws TableNotFoundException
+     *             if no table exists
+     */
     @Cacheable(value = "getCompositeFieldSeparatorMap", key = "{#root.target.auths,#root.target.metadataTableName,#ingestTypeFilter}",
                     cacheManager = "metadataHelperCacheManager")
     public Map<String,String> getCompositeFieldSeparatorMap(Set<String> ingestTypeFilter) throws TableNotFoundException {
-        log.debug("cache fault for getCompositeFieldSeparatorMap(" + this.auths + "," + this.metadataTableName + "," + ingestTypeFilter + ")");
+        log.debug("cache fault for getCompositeFieldSeparatorMap({}, {}, {})", this.auths, this.metadataTableName, ingestTypeFilter);
         
         Map<String,String> sepMap = new HashMap<>();
         
-        Scanner bs = ScannerHelper.createScanner(accumuloClient, metadataTableName, auths);
-        Range range = new Range();
-        
-        bs.setRange(range);
-        
-        bs.fetchColumnFamily(ColumnFamilyConstants.COLF_CISEP);
-        
-        for (Entry<Key,Value> entry : bs) {
-            String fieldName = entry.getKey().getRow().toString();
-            if (null != entry.getKey().getColumnQualifier()) {
+        try (Scanner bs = ScannerHelper.createScanner(accumuloClient, metadataTableName, auths)) {
+            bs.setRange(new Range());
+            bs.fetchColumnFamily(ColumnFamilyConstants.COLF_CISEP);
+            
+            for (Entry<Key,Value> entry : bs) {
+                
+                if (entry.getKey().getColumnQualifier() == null) {
+                    log.warn("ColumnQualifier null in EventMetadata for key: {}", entry.getKey());
+                    continue;
+                }
+                
                 String colq = entry.getKey().getColumnQualifier().toString();
                 int idx = colq.indexOf(NULL_BYTE);
                 
@@ -491,36 +580,67 @@ public class AllFieldMetadataHelper {
                 
                 // If types are specified and this type is not in the list,
                 // skip it.
-                if (null != ingestTypeFilter && ingestTypeFilter.size() > 0 && !ingestTypeFilter.contains(type)) {
+                if (null != ingestTypeFilter && !ingestTypeFilter.isEmpty() && !ingestTypeFilter.contains(type)) {
                     continue;
                 }
                 
                 if (idx != -1) {
+                    String fieldName = entry.getKey().getRow().toString();
                     String separator = colq.substring(idx + 1);
                     sepMap.put(fieldName, separator);
                 } else {
-                    log.warn("EventMetadata entry did not contain a null byte in the column qualifier: " + entry.getKey().toString());
+                    log.warn("EventMetadata entry did not contain a null byte in the column qualifier: {}", entry.getKey());
                 }
-            } else {
-                log.warn("ColumnQualifier null in EventMetadata for key: " + entry.getKey().toString());
             }
         }
         
         return Collections.unmodifiableMap(sepMap);
     }
     
+    /**
+     * Get the {@link TypeMetadata} for all ingest types
+     *
+     * @return the TypeMetadata
+     * @throws TableNotFoundException
+     *             if no table exists
+     */
     public TypeMetadata getTypeMetadata() throws TableNotFoundException {
         return this.typeMetadataHelper.getTypeMetadata(null);
     }
     
+    /**
+     * Get the {@link TypeMetadata} for a particular set of ingest types
+     *
+     * @param ingestTypeFilter
+     *            the set of ingest types used to filter the scan
+     * @return the {@link TypeMetadata} for a particular set of ingest types
+     * @throws TableNotFoundException
+     *             if no table exists
+     */
     public TypeMetadata getTypeMetadata(Set<String> ingestTypeFilter) throws TableNotFoundException {
         return this.typeMetadataHelper.getTypeMetadata(ingestTypeFilter);
     }
     
+    /**
+     * Get the {@link CompositeMetadata} for all ingest types
+     *
+     * @return the CompositeMetadata
+     * @throws TableNotFoundException
+     *             if no table exists
+     */
     public CompositeMetadata getCompositeMetadata() throws TableNotFoundException {
         return this.compositeMetadataHelper.getCompositeMetadata(null);
     }
     
+    /**
+     * Get the {@link CompositeMetadata} for the specified ingest types
+     *
+     * @param ingestTypeFilter
+     *            the set of ingest types used to filter the scan
+     * @return the CompositeMetadata
+     * @throws TableNotFoundException
+     *             if no table exists
+     */
     public CompositeMetadata getCompositeMetadata(Set<String> ingestTypeFilter) throws TableNotFoundException {
         return this.compositeMetadataHelper.getCompositeMetadata(ingestTypeFilter);
     }
@@ -531,16 +651,19 @@ public class AllFieldMetadataHelper {
      * 
      * @param ingestTypeFilter
      *            Any projection of datatypes to limit the fetch for.
-     * @return
+     * @return a multimap of fields to Types
      * @throws InstantiationException
+     *             not thrown, remove
      * @throws IllegalAccessException
+     *             not thrown, remove
      * @throws TableNotFoundException
+     *             if no table exists
      */
     @Cacheable(value = "getFieldsToDatatypes", key = "{#root.target.auths,#root.target.metadataTableName,#ingestTypeFilter}",
                     cacheManager = "metadataHelperCacheManager")
     public Multimap<String,Type<?>> getFieldsToDatatypes(Set<String> ingestTypeFilter)
                     throws InstantiationException, IllegalAccessException, TableNotFoundException {
-        log.debug("cache fault for getFieldsToDatatypes(" + this.auths + "," + this.metadataTableName + "," + ingestTypeFilter + ")");
+        log.debug("cache fault for getFieldsToDatatypes({}, {}, {})", this.auths, this.metadataTableName, ingestTypeFilter);
         TypeMetadata typeMetadata = this.typeMetadataHelper.getTypeMetadata(ingestTypeFilter);
         Multimap<String,Type<?>> typeMap = HashMultimap.create();
         for (Entry<String,String> entry : typeMetadata.fold().entries()) {
@@ -550,7 +673,7 @@ public class AllFieldMetadataHelper {
                 Class<? extends Type<?>> clazz = (Class<? extends Type<?>>) Class.forName(value);
                 typeMap.put(entry.getKey(), getDatatypeFromClass(clazz));
             } catch (InstantiationException | IllegalAccessException | ClassNotFoundException e) {
-                log.error("Unable to find datatype on class path: " + value, e);
+                log.error("Unable to find datatype on class path: {}", value, e);
             }
             
         }
@@ -561,39 +684,46 @@ public class AllFieldMetadataHelper {
      * Scans the metadata table and returns the set of fields that use the supplied normalizer.
      * 
      * @param datawaveType
-     * @return
+     *            the datawave {@link Type}
+     * @return the set of fields associated with the provided Type
      * @throws InstantiationException
+     *             not thrown, remove
      * @throws IllegalAccessException
+     *             not thrown, remove
      * @throws TableNotFoundException
+     *             if no table exists
      */
     @Cacheable(value = "getFieldsForDatatype", key = "{#root.target.auths,#root.target.metadataTableName,#datawaveType}",
                     cacheManager = "metadataHelperCacheManager")
     public Set<String> getFieldsForDatatype(Class<? extends Type<?>> datawaveType)
                     throws InstantiationException, IllegalAccessException, TableNotFoundException {
-        log.debug("cache fault for getFieldsForDatatype(" + datawaveType + ")");
+        log.debug("cache fault for getFieldsForDatatype({})", datawaveType);
         return getFieldsForDatatype(datawaveType, null);
     }
     
     /**
      * Scans the metadata table and returns the set of fields that use the supplied normalizer.
-     * 
+     * <p>
      * This method allows a client to specify data types to filter out. If the set is null, then it assumed the user wants all data types. If the set is empty,
      * then it assumed the user wants no data types. Otherwise, values that occur in the set will be used as a white list of data types.
      * 
      * @param datawaveType
+     *            the datawave {@link Type}
      * @param ingestTypeFilter
-     * @return
+     *            the set of ingest types used to filter the scan
+     * @return the set of fields associated with the provided Type
      * @throws TableNotFoundException
+     *             if no table exists
      */
     @Cacheable(value = "getFieldsForDatatype", key = "{#root.target.auths,#root.target.metadataTableName,#datawaveType,#ingestTypeFilter}",
                     cacheManager = "metadataHelperCacheManager")
     public Set<String> getFieldsForDatatype(Class<? extends Type<?>> datawaveType, Set<String> ingestTypeFilter) throws TableNotFoundException {
-        log.debug("cache fault for getFieldsForDatatype(" + datawaveType + "," + ingestTypeFilter + ")");
+        log.debug("cache fault for getFieldsForDatatype({}, {})", datawaveType, ingestTypeFilter);
         TypeMetadata typeMetadata = this.typeMetadataHelper.getTypeMetadata(ingestTypeFilter);
         String datawaveTypeClassName = datawaveType.getName();
         
         // datatype class name to field name <--field name to datatype class name
-        Multimap<String,String> inverted = Multimaps.invertFrom(typeMetadata.fold(ingestTypeFilter), HashMultimap.<String,String> create());
+        Multimap<String,String> inverted = Multimaps.invertFrom(typeMetadata.fold(ingestTypeFilter), HashMultimap.create());
         
         return Sets.newHashSet(inverted.get(datawaveTypeClassName));
     }
@@ -603,20 +733,26 @@ public class AllFieldMetadataHelper {
      * 
      * @param datatypeClass
      *            The name of the normalizer class to instantiate.
-     * @return An instanace of the normalizer class that was requested.
+     * @return An instance of the normalizer class that was requested.
      * @throws InstantiationException
+     *             if the class cannot be instantiated
      * @throws IllegalAccessException
+     *             if the class is not accessible
      */
     protected Type<?> getDatatypeFromClass(Class<? extends Type<?>> datatypeClass) throws InstantiationException, IllegalAccessException {
-        return datatypeClass.newInstance();
+        return getTypeFactory().createType(datatypeClass.getName());
     }
     
     /**
      * Fetch the Set of all fields marked as containing term frequency information, {@link ColumnFamilyConstants#COLF_TF}.
-     * 
-     * @return
+     *
+     * @param ingestTypeFilter
+     *            the set of ingest types used to limit the scan
+     * @return the set of term frequency fields
      * @throws TableNotFoundException
+     *             if no table exists
      * @throws ExecutionException
+     *             not thrown, remove
      */
     public Set<String> getTermFrequencyFields(Set<String> ingestTypeFilter) throws TableNotFoundException, ExecutionException {
         
@@ -637,8 +773,10 @@ public class AllFieldMetadataHelper {
      * Get expansion fields using the data type filter.
      * 
      * @param ingestTypeFilter
-     * @return
+     *            a set of ingest types used to filter the scan
+     * @return the set of fields marked as expansion
      * @throws TableNotFoundException
+     *             if no table exists
      */
     public Set<String> getExpansionFields(Set<String> ingestTypeFilter) throws TableNotFoundException {
         
@@ -659,8 +797,10 @@ public class AllFieldMetadataHelper {
      * Get the content fields which are those to be queried when using the content functions.
      * 
      * @param ingestTypeFilter
-     * @return
+     *            the set of ingest types used to filter the scan
+     * @return the set of content fields
      * @throws TableNotFoundException
+     *             if no table exists
      */
     public Set<String> getContentFields(Set<String> ingestTypeFilter) throws TableNotFoundException {
         
@@ -677,6 +817,15 @@ public class AllFieldMetadataHelper {
         return Collections.unmodifiableSet(fields);
     }
     
+    /**
+     * Get the set of ingest types that exist in the database
+     *
+     * @param ingestTypeFilter
+     *            a set of ingest types
+     * @return the set of ingest types that exist
+     * @throws TableNotFoundException
+     *             if no table exists
+     */
     public Set<String> getDatatypes(Set<String> ingestTypeFilter) throws TableNotFoundException {
         
         Set<String> datatypes = loadDatatypes();
@@ -687,42 +836,54 @@ public class AllFieldMetadataHelper {
         return Collections.unmodifiableSet(datatypes);
     }
     
+    /**
+     * Get the counts of a field for a particular day
+     *
+     * @param identifier
+     *            and entry of field name and date
+     * @return a map of datatypes and counts
+     * @throws TableNotFoundException
+     *             if no table exists
+     * @throws IOException
+     *             if there is a problem deserializing the Values
+     */
     protected HashMap<String,Long> getCountsByFieldInDayWithTypes(Entry<String,String> identifier) throws TableNotFoundException, IOException {
         String fieldName = identifier.getKey();
         String date = identifier.getValue();
         
-        Scanner scanner = ScannerHelper.createScanner(accumuloClient, metadataTableName, auths);
-        scanner.fetchColumnFamily(ColumnFamilyConstants.COLF_F);
-        scanner.setRange(Range.exact(fieldName));
+        final HashMap<String,Long> datatypeToCounts;
         
-        // It's possible to find rows with column qualifiers in the format <datatype> (aggregated entries) and/or <datatype>\0<date> (non-aggregated entries).
-        // Filter out any non-aggregated entries that does not have the date in the column qualifier.
-        IteratorSetting cqRegex = new IteratorSetting(50, RegExFilter.class);
-        // Allow any entries that do not contain the null byte delimiter, or contain it with the target date directly afterwards.
-        RegExFilter.setRegexs(cqRegex, null, null, "^((?!\u0000).)*$|^(.*\u0000" + date + ")$", null, false);
-        scanner.addScanIterator(cqRegex);
-        
-        final HashMap<String,Long> datatypeToCounts = Maps.newHashMap();
-        for (Entry<Key,Value> entry : scanner) {
-            Text colq = entry.getKey().getColumnQualifier();
-            int nullBytePos = colq.find(NULL_BYTE);
+        try (Scanner scanner = ScannerHelper.createScanner(accumuloClient, metadataTableName, auths)) {
+            scanner.fetchColumnFamily(ColumnFamilyConstants.COLF_F);
+            scanner.setRange(Range.exact(fieldName));
             
-            // If the null byte is not present in the colq, this is an aggregated entry. The colq consists solely of the datatype, and the value is a
-            // DateFrequencyMap.
-            if (nullBytePos == -1) {
-                String datatype = Text.decode(colq.getBytes());
-                DateFrequencyMap map = new DateFrequencyMap(entry.getValue().get());
-                // If a count is present for the target date, merge in the sum.
-                if (map.contains(date)) {
-                    long count = map.get(date).getValue();
+            // It's possible to find rows with column qualifiers in the format <datatype> (aggregated entries) and/or <datatype>\0<date> (non-aggregated entries).
+            // Filter out any non-aggregated entries that does not have the date in the column qualifier.
+            IteratorSetting cqRegex = new IteratorSetting(50, RegExFilter.class);
+            // Allow any entries that do not contain the null byte delimiter, or contain it with the target date directly afterwards.
+            RegExFilter.setRegexs(cqRegex, null, null, "^(.*\u0000" + FrequencyMetadataAggregator.AGGREGATED + ")$|^(.*\u0000" + date + ")$", null, false);
+            scanner.addScanIterator(cqRegex);
+            
+            datatypeToCounts = Maps.newHashMap();
+            for (Entry<Key,Value> countEntry : scanner) {
+                String colq = countEntry.getKey().getColumnQualifier().toString();
+                int offset = colq.indexOf(NULL_BYTE);
+                String datatype = colq.substring(0, offset);
+                
+                String remainder = colq.substring((offset + 1));
+                if (remainder.equals(FrequencyMetadataAggregator.AGGREGATED)) {
+                    DateFrequencyMap countMap = new DateFrequencyMap(countEntry.getValue().get());
+                    if (countMap.contains(date)) {
+                        long count = countMap.get(date).getValue();
+                        datatypeToCounts.merge(datatype, count, Long::sum);
+                    }
+                } else {
+                    ByteArrayInputStream bais = new ByteArrayInputStream(countEntry.getValue().get());
+                    DataInputStream inputStream = new DataInputStream(bais);
+                    Long count = WritableUtils.readVLong(inputStream);
                     datatypeToCounts.merge(datatype, count, Long::sum);
                 }
-            } else {
-                // If the null byte is present, this is an entry that hasn't been compacted yet. The colq consists of the datatype and date, and the value is a
-                // long.
-                String datatype = Text.decode(colq.getBytes(), 0, nullBytePos);
-                Long count = SummingCombiner.VAR_LEN_ENCODER.decode(entry.getValue().get());
-                datatypeToCounts.merge(datatype, count, Long::sum);
+                
             }
         }
         
@@ -733,7 +894,8 @@ public class AllFieldMetadataHelper {
      * Transform an Iterable of MetadataEntry's to just fieldName. This does not de-duplicate field names
      * 
      * @param from
-     * @return
+     *            the metadata entries
+     * @return the field names
      */
     public static Iterable<String> fieldNames(Iterable<MetadataEntry> from) {
         return Iterables.transform(from, toFieldName);
@@ -743,7 +905,8 @@ public class AllFieldMetadataHelper {
      * Transform an Iterable of MetadataEntry's to just fieldName, removing duplicates.
      * 
      * @param from
-     * @return
+     *            the metadata entries
+     * @return the unique field name
      */
     public static Set<String> uniqueFieldNames(Iterable<MetadataEntry> from) {
         return Sets.newHashSet(fieldNames(from));
@@ -753,7 +916,8 @@ public class AllFieldMetadataHelper {
      * Transform an Iterable of MetadataEntry's to just datatype. This does not de-duplicate datatypes
      * 
      * @param from
-     * @return
+     *            the metadata entries
+     * @return the datatypes
      */
     public static Iterable<String> datatypes(Iterable<MetadataEntry> from) {
         return Iterables.transform(from, toDatatype);
@@ -763,7 +927,8 @@ public class AllFieldMetadataHelper {
      * Transform an Iterable of MetadataEntry's to just datatype, removing duplicates.
      * 
      * @param from
-     * @return
+     *            the metadata entries
+     * @return the unique datatypes
      */
     public static Set<String> uniqueDatatypes(Iterable<MetadataEntry> from) {
         return Sets.newHashSet(datatypes(from));
@@ -774,42 +939,37 @@ public class AllFieldMetadataHelper {
      * Returns a multimap of datatype to field
      * 
      * @throws TableNotFoundException
+     *             if no table exists
      */
     @Cacheable(value = "loadAllFields", key = "{#root.target.auths,#root.target.metadataTableName}", cacheManager = "metadataHelperCacheManager")
     public Multimap<String,String> loadAllFields() throws TableNotFoundException {
-        log.debug("cache fault for loadAllFields(" + this.auths + "," + this.metadataTableName + ")");
+        log.debug("cache fault for loadAllFields({}, {})", this.auths, this.metadataTableName);
         if (log.isTraceEnabled()) {
-            log.trace("Using these minimized auths:" + AuthorizationsMinimizer.minimize(this.auths).iterator().next());
+            log.trace("Using these minimized auths: {}", AuthorizationsMinimizer.minimize(this.auths).iterator().next());
+            log.trace("loadAllFields from table: {}", metadataTableName);
         }
+        
         Multimap<String,String> fields = HashMultimap.create();
         
-        Scanner bs = ScannerHelper.createScanner(accumuloClient, metadataTableName, auths);
-        if (log.isTraceEnabled())
-            log.trace("loadAllFields from table: " + metadataTableName);
-        
-        bs.setRange(new Range());
-        
-        // We don't want to fetch all columns because that could include model
-        // field names
-        bs.fetchColumnFamily(ColumnFamilyConstants.COLF_T);
-        bs.fetchColumnFamily(ColumnFamilyConstants.COLF_I);
-        bs.fetchColumnFamily(ColumnFamilyConstants.COLF_E);
-        bs.fetchColumnFamily(ColumnFamilyConstants.COLF_RI);
-        bs.fetchColumnFamily(ColumnFamilyConstants.COLF_TF);
-        bs.fetchColumnFamily(ColumnFamilyConstants.COLF_CI);
-        
-        Iterator<Entry<Key,Value>> iterator = bs.iterator();
-        
-        while (iterator.hasNext()) {
-            Entry<Key,Value> entry = iterator.next();
-            Key k = entry.getKey();
+        try (Scanner bs = ScannerHelper.createScanner(accumuloClient, metadataTableName, auths)) {
+            bs.setRange(new Range());
             
-            String fieldname = k.getRow().toString();
-            String datatype = getDatatype(k);
+            // We don't want to fetch all columns because that could include model
+            // field names
+            bs.fetchColumnFamily(ColumnFamilyConstants.COLF_T);
+            bs.fetchColumnFamily(ColumnFamilyConstants.COLF_I);
+            bs.fetchColumnFamily(ColumnFamilyConstants.COLF_E);
+            bs.fetchColumnFamily(ColumnFamilyConstants.COLF_RI);
+            bs.fetchColumnFamily(ColumnFamilyConstants.COLF_TF);
+            bs.fetchColumnFamily(ColumnFamilyConstants.COLF_CI);
             
-            fields.put(datatype, fieldname);
+            for (Entry<Key,Value> entry : bs) {
+                Key k = entry.getKey();
+                String fieldName = k.getRow().toString();
+                String datatype = getDatatype(k);
+                fields.put(datatype, fieldName);
+            }
         }
-        
         return Multimaps.unmodifiableMultimap(fields);
     }
     
@@ -818,18 +978,21 @@ public class AllFieldMetadataHelper {
      * Returns a multimap of datatype to field
      * 
      * @throws TableNotFoundException
+     *             if no table exists
      */
     @Cacheable(value = "getIndexOnlyFields", key = "{#root.target.auths,#root.target.metadataTableName}", cacheManager = "metadataHelperCacheManager")
     public Multimap<String,String> getIndexOnlyFields() throws TableNotFoundException {
-        log.debug("cache fault for getIndexOnlyFields(" + this.auths + "," + this.metadataTableName + ")");
+        log.debug("cache fault for getIndexOnlyFields({}, {})", this.auths, this.metadataTableName);
+        
+        if (log.isTraceEnabled()) {
+            log.trace("loadIndexOnlyFields from table: {}", metadataTableName);
+        }
+        
         Multimap<String,String> fields = HashMultimap.create();
         
         final Map<String,Multimap<Text,Text>> metadata = new HashMap<>();
         
         Scanner bs = ScannerHelper.createScanner(accumuloClient, metadataTableName, auths);
-        
-        if (log.isTraceEnabled())
-            log.trace("loadIndexOnlyFields from table: " + metadataTableName);
         
         // Fetch the 'e' and 'i' columns
         bs.fetchColumnFamily(ColumnFamilyConstants.COLF_E);
@@ -885,23 +1048,25 @@ public class AllFieldMetadataHelper {
      * Fetch the Set of all fields marked as containing term frequency information, {@link ColumnFamilyConstants#COLF_TF}. Returns a multimap of datatype to
      * field
      * 
-     * @return
+     * @return the multimap of datatypes to term frequency fields
      * @throws TableNotFoundException
+     *             if no table exists
      */
     @Cacheable(value = "loadTermFrequencyFields", key = "{#root.target.auths,#root.target.metadataTableName}", cacheManager = "metadataHelperCacheManager")
     public Multimap<String,String> loadTermFrequencyFields() throws TableNotFoundException {
-        log.debug("cache fault for loadTermFrequencyFields(" + this.auths + "," + this.metadataTableName + ")");
+        log.debug("cache fault for loadTermFrequencyFields({}, {})", this.auths, this.metadataTableName);
         Multimap<String,String> fields = HashMultimap.create();
-        if (log.isTraceEnabled())
-            log.trace("loadTermFrequencyFields from table: " + metadataTableName);
+        if (log.isTraceEnabled()) {
+            log.trace("loadTermFrequencyFields from table: {}", metadataTableName);
+        }
         // Scanner to the provided metadata table
-        Scanner bs = ScannerHelper.createScanner(accumuloClient, metadataTableName, auths);
-        
-        bs.setRange(new Range());
-        bs.fetchColumnFamily(ColumnFamilyConstants.COLF_TF);
-        
-        for (Entry<Key,Value> entry : bs) {
-            fields.put(getDatatype(entry.getKey()), entry.getKey().getRow().toString());
+        try (Scanner bs = ScannerHelper.createScanner(accumuloClient, metadataTableName, auths)) {
+            bs.setRange(new Range());
+            bs.fetchColumnFamily(ColumnFamilyConstants.COLF_TF);
+            
+            for (Entry<Key,Value> entry : bs) {
+                fields.put(getDatatype(entry.getKey()), entry.getKey().getRow().toString());
+            }
         }
         
         return Multimaps.unmodifiableMultimap(fields);
@@ -910,25 +1075,27 @@ public class AllFieldMetadataHelper {
     /**
      * Fetch the Set of all fields marked as being indexed, {@link ColumnFamilyConstants#COLF_I}. Returns a multimap of datatype to field
      * 
-     * @return
+     * @return a multimap of datatypes to indexed fields
      * @throws TableNotFoundException
+     *             if no table exists
      */
     @Cacheable(value = "loadIndexedFields", key = "{#root.target.auths,#root.target.metadataTableName}", cacheManager = "metadataHelperCacheManager")
     public Multimap<String,String> loadIndexedFields() throws TableNotFoundException {
-        log.debug("cache fault for loadIndexedFields(" + this.auths + "," + this.metadataTableName + ")");
+        log.debug("cache fault for loadIndexedFields({}, {})", this.auths, this.metadataTableName);
+        
+        if (log.isTraceEnabled()) {
+            log.trace("loadIndexedFields from table: {}", metadataTableName);
+        }
+        
         Multimap<String,String> fields = HashMultimap.create();
         
-        Scanner bs = ScannerHelper.createScanner(accumuloClient, metadataTableName, auths);
-        
-        bs.setRange(new Range());
-        bs.fetchColumnFamily(ColumnFamilyConstants.COLF_I);
-        
-        if (log.isTraceEnabled())
-            log.trace("loadIndexedFields from table: " + metadataTableName);
-        
-        for (Entry<Key,Value> entry : bs) {
-            fields.put(getDatatype(entry.getKey()), entry.getKey().getRow().toString());
+        try (Scanner bs = ScannerHelper.createScanner(accumuloClient, metadataTableName, auths)) {
+            bs.setRange(new Range());
+            bs.fetchColumnFamily(ColumnFamilyConstants.COLF_I);
             
+            for (Entry<Key,Value> entry : bs) {
+                fields.put(getDatatype(entry.getKey()), entry.getKey().getRow().toString());
+            }
         }
         
         return Multimaps.unmodifiableMultimap(fields);
@@ -937,136 +1104,145 @@ public class AllFieldMetadataHelper {
     /**
      * Fetch the Set of all fields marked as being reverse indexed, {@link ColumnFamilyConstants#COLF_RI}. Returns a multimap of datatype to field
      *
-     * @return
+     * @return the multimap of datatypes to reverse indexed fields
      * @throws TableNotFoundException
+     *             if no table exists
      */
     @Cacheable(value = "loadReverseIndexedFields", key = "{#root.target.auths,#root.target.metadataTableName}", cacheManager = "metadataHelperCacheManager")
     public Multimap<String,String> loadReverseIndexedFields() throws TableNotFoundException {
-        log.debug("cache fault for loadReverseIndexedFields(" + this.auths + "," + this.metadataTableName + ")");
-        Multimap<String,String> fields = HashMultimap.create();
+        log.debug("cache fault for loadReverseIndexedFields({}, {})", this.auths, this.metadataTableName);
         
-        Scanner bs = ScannerHelper.createScanner(accumuloClient, metadataTableName, auths);
-        
-        bs.setRange(new Range());
-        bs.fetchColumnFamily(ColumnFamilyConstants.COLF_RI);
-        
-        if (log.isTraceEnabled())
-            log.trace("loadReverseIndexedFields from table: " + metadataTableName);
-        
-        for (Entry<Key,Value> entry : bs) {
-            fields.put(getDatatype(entry.getKey()), entry.getKey().getRow().toString());
-            
+        if (log.isTraceEnabled()) {
+            log.trace("loadReverseIndexedFields from table: {}", metadataTableName);
         }
         
+        Multimap<String,String> fields = HashMultimap.create();
+        
+        try (Scanner bs = ScannerHelper.createScanner(accumuloClient, metadataTableName, auths)) {
+            bs.setRange(new Range());
+            bs.fetchColumnFamily(ColumnFamilyConstants.COLF_RI);
+            
+            for (Entry<Key,Value> entry : bs) {
+                fields.put(getDatatype(entry.getKey()), entry.getKey().getRow().toString());
+            }
+        }
         return Multimaps.unmodifiableMultimap(fields);
     }
     
     /**
      * Fetch the Set of all fields marked as being indexed, {@link ColumnFamilyConstants#COLF_I}. Returns a multimap of datatype to field
      * 
-     * @return
+     * @return the multimap of datatype to indexed fields
      * @throws TableNotFoundException
+     *             if no table exists
      */
     @Cacheable(value = "loadIndexedFields", key = "{#root.target.fullUserAuths,#root.target.metadataTableName}", cacheManager = "metadataHelperCacheManager")
     public Multimap<String,String> loadAllIndexedFields() throws TableNotFoundException {
-        log.debug("cache fault for loadIndexedFields(" + this.auths + "," + this.metadataTableName + ")");
-        Multimap<String,String> fields = HashMultimap.create();
+        log.debug("cache fault for loadIndexedFields({}, {})", this.auths, this.metadataTableName);
         
-        Scanner bs = ScannerHelper.createScanner(accumuloClient, metadataTableName, fullUserAuths);
-        
-        bs.setRange(new Range());
-        bs.fetchColumnFamily(ColumnFamilyConstants.COLF_I);
-        
-        if (log.isTraceEnabled())
-            log.trace("loadIndexedFields from table: " + metadataTableName);
-        
-        for (Entry<Key,Value> entry : bs) {
-            fields.put(getDatatype(entry.getKey()), entry.getKey().getRow().toString());
-            
+        if (log.isTraceEnabled()) {
+            log.trace("loadIndexedFields from table: {}", metadataTableName);
         }
         
+        Multimap<String,String> fields = HashMultimap.create();
+        
+        try (Scanner bs = ScannerHelper.createScanner(accumuloClient, metadataTableName, fullUserAuths)) {
+            bs.setRange(new Range());
+            bs.fetchColumnFamily(ColumnFamilyConstants.COLF_I);
+            
+            for (Entry<Key,Value> entry : bs) {
+                fields.put(getDatatype(entry.getKey()), entry.getKey().getRow().toString());
+            }
+        }
         return Multimaps.unmodifiableMultimap(fields);
     }
     
     /**
      * Fetch the Set of all fields marked as being expansion fields, {@link ColumnFamilyConstants#COLF_EXP}. Returns a multimap of datatype to field
      * 
-     * @return
+     * @return the multimap of datatype to expansion field
      * @throws TableNotFoundException
+     *             if no table exists
      */
     @Cacheable(value = "loadExpansionFields", key = "{#root.target.auths,#root.target.metadataTableName}", cacheManager = "metadataHelperCacheManager")
     public Multimap<String,String> loadExpansionFields() throws TableNotFoundException {
-        log.debug("cache fault for loadExpansionFields(" + this.auths + "," + this.metadataTableName + ")");
-        Multimap<String,String> fields = HashMultimap.create();
+        log.debug("cache fault for loadExpansionFields({}, {})", this.auths, this.metadataTableName);
         
-        Scanner bs = ScannerHelper.createScanner(accumuloClient, metadataTableName, auths);
-        
-        bs.setRange(new Range());
-        bs.fetchColumnFamily(ColumnFamilyConstants.COLF_EXP);
-        
-        if (log.isTraceEnabled())
-            log.trace("loadExpansionFields from table: " + metadataTableName);
-        
-        for (Entry<Key,Value> entry : bs) {
-            fields.put(getDatatype(entry.getKey()), entry.getKey().getRow().toString());
+        if (log.isTraceEnabled()) {
+            log.trace("loadExpansionFields from table: {}", metadataTableName);
         }
         
+        Multimap<String,String> fields = HashMultimap.create();
+        
+        try (Scanner bs = ScannerHelper.createScanner(accumuloClient, metadataTableName, auths)) {
+            bs.setRange(new Range());
+            bs.fetchColumnFamily(ColumnFamilyConstants.COLF_EXP);
+            
+            for (Entry<Key,Value> entry : bs) {
+                fields.put(getDatatype(entry.getKey()), entry.getKey().getRow().toString());
+            }
+        }
         return Multimaps.unmodifiableMultimap(fields);
     }
     
     /**
      * Fetch the set of all fields marked as being content fields, {@link ColumnFamilyConstants#COLF_CONTENT}. Returns a multimap of datatype to field
      * 
-     * @return
+     * @return the multimap of datatype to content fields
      * @throws TableNotFoundException
+     *             if no table exists
      */
     @Cacheable(value = "loadContentFields", key = "{#root.target.auths,#root.target.metadataTableName}", cacheManager = "metadataHelperCacheManager")
     public Multimap<String,String> loadContentFields() throws TableNotFoundException {
-        log.debug("cache fault for loadContentFields(" + this.auths + "," + this.metadataTableName + ")");
-        Multimap<String,String> fields = HashMultimap.create();
+        log.debug("cache fault for loadContentFields({}, {})", this.auths, this.metadataTableName);
         
-        Scanner bs = ScannerHelper.createScanner(accumuloClient, metadataTableName, auths);
-        
-        bs.setRange(new Range());
-        bs.fetchColumnFamily(ColumnFamilyConstants.COLF_CONTENT);
-        
-        if (log.isTraceEnabled())
-            log.trace("loadContentFields from table: " + metadataTableName);
-        
-        for (Entry<Key,Value> entry : bs) {
-            fields.put(getDatatype(entry.getKey()), entry.getKey().getRow().toString());
+        if (log.isTraceEnabled()) {
+            log.trace("loadContentFields from table: {}", metadataTableName);
         }
         
+        Multimap<String,String> fields = HashMultimap.create();
+        
+        try (Scanner bs = ScannerHelper.createScanner(accumuloClient, metadataTableName, auths)) {
+            bs.setRange(new Range());
+            bs.fetchColumnFamily(ColumnFamilyConstants.COLF_CONTENT);
+            
+            for (Entry<Key,Value> entry : bs) {
+                fields.put(getDatatype(entry.getKey()), entry.getKey().getRow().toString());
+            }
+        }
         return Multimaps.unmodifiableMultimap(fields);
     }
     
     /**
      * Fetch the Set of all datatypes that appear in the DatawaveMetadata table.
-     * 
+     * <p>
      * By scanning for all {@link ColumnFamilyConstants#COLF_E}, we will find all of the datatypes currently ingested by virtue that a datatype must have at
      * least one field that appears in an event.
-     * 
+     *
+     * @return the set of all datatypes
      * @throws TableNotFoundException
+     *             if no table exists
      */
     @Cacheable(value = "loadDatatypes", key = "{#root.target.auths,#root.target.metadataTableName}", cacheManager = "metadataHelperCacheManager")
     public Set<String> loadDatatypes() throws TableNotFoundException {
-        log.debug("cache fault for loadDatatypes(" + this.auths + "," + this.metadataTableName + ")");
-        if (log.isTraceEnabled())
-            log.trace("loadDatatypes from table: " + metadataTableName);
+        log.debug("cache fault for loadDatatypes({}, {})", this.auths, this.metadataTableName);
+        
+        if (log.isTraceEnabled()) {
+            log.trace("loadDatatypes from table: {}", metadataTableName);
+        }
+        
         HashSet<String> datatypes = new HashSet<>();
         final Text holder = new Text();
         
-        Scanner bs = ScannerHelper.createScanner(accumuloClient, metadataTableName, auths);
-        
-        bs.setRange(new Range());
-        bs.fetchColumnFamily(ColumnFamilyConstants.COLF_E);
-        
-        for (Entry<Key,Value> entry : bs) {
-            entry.getKey().getColumnQualifier(holder);
+        try (Scanner bs = ScannerHelper.createScanner(accumuloClient, metadataTableName, auths)) {
+            bs.setRange(new Range());
+            bs.fetchColumnFamily(ColumnFamilyConstants.COLF_E);
             
-            datatypes.add(holder.toString());
+            for (Entry<Key,Value> entry : bs) {
+                entry.getKey().getColumnQualifier(holder);
+                datatypes.add(holder.toString());
+            }
         }
-        
         return Collections.unmodifiableSet(datatypes);
     }
     
@@ -1106,8 +1282,29 @@ public class AllFieldMetadataHelper {
         return getFieldIndexHoles(ColumnFamilyConstants.COLF_RI, fields, datatypes, minThreshold);
     }
     
+    /**
+     * Get the field index holes for the provided fields and datatypes
+     *
+     * @param targetColumnFamily
+     *            the target column family
+     * @param fields
+     *            a set of fields for which to get holes (can be empty to denote all)
+     * @param datatypes
+     *            a set of datatypes (can be empty to denote all)
+     * @param minThreshold
+     *            the minimum threshold
+     * @return a map of index holes by datatype
+     * @throws TableNotFoundException
+     *             if no table exists
+     * @throws IOException
+     *             if a value fails to deserialize
+     */
     private Map<String,Map<String,FieldIndexHole>> getFieldIndexHoles(Text targetColumnFamily, Set<String> fields, Set<String> datatypes, double minThreshold)
                     throws TableNotFoundException, IOException {
+        // create local copies to avoid side effects
+        fields = new HashSet<>(fields);
+        datatypes = new HashSet<>(datatypes);
+        
         // Handle null fields if given.
         if (fields == null) {
             fields = Collections.emptySet();
@@ -1124,6 +1321,30 @@ public class AllFieldMetadataHelper {
             datatypes.remove(null);
         }
         
+        // remove fields that are not indexed at all by the specified datatypes
+        Multimap<String,String> indexedFieldMap = (targetColumnFamily == ColumnFamilyConstants.COLF_I ? loadIndexedFields() : loadReverseIndexedFields());
+        Set<String> indexedFields = new HashSet<>();
+        if (datatypes.isEmpty()) {
+            indexedFields.addAll(indexedFieldMap.values());
+        } else {
+            indexedFields = new HashSet<>();
+            for (String datatype : datatypes) {
+                indexedFields.addAll(indexedFieldMap.get(datatype));
+            }
+        }
+        
+        // if the initial fields list is empty, then we want all possible holes
+        if (fields.isEmpty()) {
+            fields = indexedFields;
+        } else {
+            fields.retainAll(indexedFields);
+            
+            // if we have removed all fields, then there are no fields for which we can generate holes
+            if (fields.isEmpty()) {
+                return new HashMap<>();
+            }
+        }
+        
         // Ensure the minThreshold is a percentage in the range 0%-100%.
         if (minThreshold > 1.0d) {
             minThreshold = 1.0d;
@@ -1131,29 +1352,78 @@ public class AllFieldMetadataHelper {
             minThreshold = 0.0d;
         }
         
-        Scanner bs = ScannerHelper.createScanner(accumuloClient, metadataTableName, auths);
-        
-        // Fetch the frequency column and the specified index column.
-        bs.fetchColumnFamily(ColumnFamilyConstants.COLF_F);
-        bs.fetchColumnFamily(targetColumnFamily);
-        
-        // Determine which range to use.
-        Range range;
-        if (fields.isEmpty()) {
-            // If no fields are specified, scan over all entries in the table.
-            range = new Range();
-        } else if (fields.size() == 1) {
-            // If just one field is specified, limit the range to where the row is the field.
-            range = new Range(new Text(fields.iterator().next()));
-        } else {
-            // If more than one field is specified, sort the fields and limit the range from the lowest to highest field (lexicographically).
-            SortedSet<String> sortedFields = new TreeSet<>(fields);
-            range = new Range(new Text(sortedFields.first()), new Text(sortedFields.last()));
+        Map<String,Map<String,FieldIndexHole>> indexHoles;
+        try (Scanner bs = ScannerHelper.createScanner(accumuloClient, metadataTableName, auths)) {
+            
+            // Fetch the frequency column and the specified index column.
+            bs.fetchColumnFamily(ColumnFamilyConstants.COLF_F);
+            bs.fetchColumnFamily(targetColumnFamily);
+            
+            // Determine which range to use.
+            Range range;
+            if (fields.isEmpty()) {
+                // If no fields are specified, scan over all entries in the table.
+                range = new Range();
+            } else if (fields.size() == 1) {
+                // If just one field is specified, limit the range to where the row is the field.
+                range = new Range(new Text(fields.iterator().next()));
+            } else {
+                // If more than one field is specified, sort the fields and limit the range from the lowest to highest field (lexicographically).
+                SortedSet<String> sortedFields = new TreeSet<>(fields);
+                range = new Range(new Text(sortedFields.first()), new Text(sortedFields.last()));
+            }
+            bs.setRange(range);
+            
+            FieldIndexHoleFinder finder = new FieldIndexHoleFinder(bs, minThreshold, fields, datatypes);
+            indexHoles = finder.findHoles();
         }
-        bs.setRange(range);
+        return indexHoles;
+    }
+    
+    public int getTypeCacheSize() {
+        return typeCacheSize;
+    }
+    
+    public void setTypeCacheSize(int typeCacheSize) {
+        this.typeCacheSize = typeCacheSize;
+    }
+    
+    public int getTypeCacheExpirationInMinutes() {
+        return typeCacheExpirationInMinutes;
+    }
+    
+    public void setTypeCacheExpirationInMinutes(int typeCacheExpirationInMinutes) {
+        this.typeCacheExpirationInMinutes = typeCacheExpirationInMinutes;
+    }
+    
+    private static class FieldCount {
+        private long count = 0;
+        private Boolean boundaryValue;
         
-        FieldIndexHoleFinder finder = new FieldIndexHoleFinder(bs, minThreshold, fields, datatypes);
-        return finder.findHoles();
+        public void increment(long value) {
+            this.count += value;
+        }
+        
+        public void setBoundaryValue(boolean boundaryValue) {
+            this.boundaryValue = boundaryValue;
+        }
+        
+        public boolean isBoundary() {
+            return this.boundaryValue != null;
+        }
+        
+        public boolean getBoundaryValue() {
+            return this.boundaryValue;
+        }
+        
+        public long getCount() {
+            return this.count;
+        }
+        
+        @Override
+        public String toString() {
+            return ToStringBuilder.reflectionToString(this);
+        }
     }
     
     /**
@@ -1169,14 +1439,14 @@ public class AllFieldMetadataHelper {
         private final boolean filterDatatypes;
         
         // Contains datatypes to dates and counts for entries seen in "f" rows for the current field name.
-        private final Map<String,SortedMap<Date,Long>> frequencyMap = new HashMap<>();
+        private final Map<String,SortedMap<Date,FieldCount>> frequencyMap = new HashMap<>();
         
         // Contains datatypes to dates and counts for entries seen in the target "i" or "ri" index rows for the current field name.
-        private final Map<String,SortedMap<Date,Long>> indexMap = new HashMap<>();
+        private final Map<String,SortedMap<Date,FieldCount>> indexMap = new HashMap<>();
         
         // Points to the target map object that we add entries to. This changes when we see a different column family compared to the previous row when scanning
         // over entries. We must initially start adding entries to the frequency map.
-        private Map<String,SortedMap<Date,Long>> targetMap = frequencyMap;
+        private Map<String,SortedMap<Date,FieldCount>> targetMap = frequencyMap;
         
         // Map of field names to maps of datatypes to date ranges encompassing field index holes.
         Map<String,Multimap<String,Pair<Date,Date>>> fieldIndexHoles = new HashMap<>();
@@ -1199,56 +1469,80 @@ public class AllFieldMetadataHelper {
          * 
          * @return the field index holes
          * @throws IOException
-         *             if an exception occurs when decoding a {@link Value}
+         *             if an exception occurs when deserializing a {@link Value}
          */
         private Map<String,Map<String,FieldIndexHole>> findHoles() throws IOException {
             String prevFieldName = null;
             Text prevColumnFamily = null;
             
-            String currFieldName;
-            String currDatatype;
-            Text currColumnFamily;
-            Date currDate = null;
-            Value currentValue;
-            boolean isCurrentAggregated;
-            
             for (Map.Entry<Key,Value> entry : scanner) {
                 // Parse the current row.
                 Key key = entry.getKey();
-                currFieldName = key.getRow().toString();
-                currColumnFamily = key.getColumnFamily();
+                String currFieldName = key.getRow().toString();
+                Text currColumnFamily = key.getColumnFamily();
+                String currDatatype;
+                long currCount = 0L;
+                Date currDate = null;
+                Boolean currBoundaryValue = null;
+                DateFrequencyMap currAggregatedCounts = null;
                 
                 String cq = key.getColumnQualifier().toString();
                 int offset = cq.indexOf(NULL_BYTE);
-                isCurrentAggregated = offset == -1;
-                // If the current entry is an aggregated entry, the colq consists solely of the datatype.
-                if (isCurrentAggregated) {
+                if (offset < 0) {
                     currDatatype = cq;
-                } else {
-                    // Otherwise, the colq consists of the datatype and a date.
-                    currDatatype = cq.substring(0, offset);
-                    currDate = DateHelper.parse(cq.substring((offset + 1)));
-                }
-                
-                // Check if the current field and datatype are part of the fields and datatypes we want to retrieve field index holes for.
-                if (!isPartOfTarget(currFieldName, currDatatype)) {
-                    continue;
-                }
-                
-                currentValue = entry.getValue();
-                
-                // If this is the very first entry we've looked at, update our tracking variables, add the current entry to the target map, and continue to the
-                // next entry.
-                if (prevFieldName == null) {
-                    if (isCurrentAggregated) {
-                        addToTargetMap(currDatatype, currentValue);
-                    } else {
-                        addToTargetMap(currDatatype, currDate, currentValue);
+                    
+                    // Check if the current field and datatype are part of the fields and datatypes we want to retrieve field index holes for.
+                    if (!isPartOfTarget(currFieldName, currDatatype)) {
+                        continue;
                     }
                     
+                    // we can treat this like an index marker but the ts of the entry denotes the boundary
+                    currDate = getBaseDate(key.getTimestamp());
+                    log.warn("Found an index entry missing the date, treating as an index marker at " + currDate + " : " + key);
+                    currBoundaryValue = true;
+                } else {
+                    currDatatype = cq.substring(0, offset);
+                    
+                    // Check if the current field and datatype are part of the fields and datatypes we want to retrieve field index holes for.
+                    if (!isPartOfTarget(currFieldName, currDatatype)) {
+                        continue;
+                    }
+                    
+                    String cqRemainder = cq.substring((offset + 1));
+                    // This is an aggregated entry.
+                    if (cqRemainder.equals(FrequencyMetadataAggregator.AGGREGATED)) {
+                        currAggregatedCounts = new DateFrequencyMap(entry.getValue().get());
+                    } else {
+                        // check for a marker of <dt>\0<date>\0true/false vs just <dt>\0<date>
+                        // where the boolean denotes that we can assume the field is indexed/no on and before this date
+                        offset = cqRemainder.indexOf(NULL_BYTE);
+                        if (offset >= 0) {
+                            currBoundaryValue = Boolean.valueOf(cqRemainder.substring(offset + 1));
+                            currDate = DateHelper.parse(cqRemainder.substring(0, offset));
+                        } else {
+                            try {
+                                currDate = DateHelper.parse(cqRemainder);
+                                ByteArrayInputStream byteStream = new ByteArrayInputStream(entry.getValue().get());
+                                DataInputStream inputStream = new DataInputStream(byteStream);
+                                currCount = WritableUtils.readVLong(inputStream);
+                            } catch (DateTimeParseException e) {
+                                // probably the really old type classname format instead of a date.
+                                // we can treat this like an index marker but the ts of the entry denotes the boundary
+                                currDate = getBaseDate(key.getTimestamp());
+                                log.warn("Found an index entry missing the date, treating as an index marker at " + currDate + " : " + key);
+                                currBoundaryValue = true;
+                            }
+                        }
+                    }
+                }
+                
+                // If this is the very first entry we've looked at, update our tracking variables
+                if (prevFieldName == null) {
                     prevFieldName = currFieldName;
-                    prevColumnFamily = currColumnFamily;
-                    continue;
+                    // assume we are starting with the COLF_F entries
+                    prevColumnFamily = ColumnFamilyConstants.COLF_F;
+                    // Set the target map to the frequency map.
+                    this.targetMap = frequencyMap;
                 }
                 
                 // The column family is different. We have two possible scenarios:
@@ -1270,6 +1564,13 @@ public class AllFieldMetadataHelper {
                         // The current column family is the target index column family. Set the target map to the index map.
                         this.targetMap = indexMap;
                     }
+                    
+                    // Add the current entry to the target entry map.
+                    if (currAggregatedCounts != null) {
+                        addToTargetMap(currDatatype, currAggregatedCounts);
+                    } else {
+                        addToTargetMap(currDatatype, currDate, currCount, currBoundaryValue);
+                    }
                 } else {
                     // The column family is the same. We have two possible scenarios:
                     // - A row with a field that is different to the previous field.
@@ -1281,14 +1582,20 @@ public class AllFieldMetadataHelper {
                         findFieldIndexHoles(prevFieldName);
                         // Clear the entry maps.
                         clearEntryMaps();
+                        // Add the current entry to the target entry map.
+                        if (currAggregatedCounts != null) {
+                            addToTargetMap(currDatatype, currAggregatedCounts);
+                        } else {
+                            addToTargetMap(currDatatype, currDate, currCount, currBoundaryValue);
+                        }
+                    } else {
+                        // The current row has the same field. Add the current entry to the target map.
+                        if (currAggregatedCounts != null) {
+                            addToTargetMap(currDatatype, currAggregatedCounts);
+                        } else {
+                            addToTargetMap(currDatatype, currDate, currCount, currBoundaryValue);
+                        }
                     }
-                }
-                
-                // Add the current entry to the target entry map.
-                if (isCurrentAggregated) {
-                    addToTargetMap(currDatatype, currentValue);
-                } else {
-                    addToTargetMap(currDatatype, currDate, currentValue);
                 }
                 
                 // Set the values for our prev entry to the current entry.
@@ -1303,6 +1610,16 @@ public class AllFieldMetadataHelper {
             return getImmutableFieldIndexHoles();
         }
         
+        private Date getBaseDate(long ts) {
+            Calendar c = Calendar.getInstance();
+            c.setTimeInMillis(ts);
+            c.set(Calendar.HOUR_OF_DAY, 0);
+            c.set(Calendar.SECOND, 0);
+            c.set(Calendar.MINUTE, 0);
+            c.set(Calendar.MILLISECOND, 0);
+            return c.getTime();
+        }
+        
         /**
          * Return whether the given field and datatype represent a pairing that should be evaluated for field index holes.
          */
@@ -1311,21 +1628,46 @@ public class AllFieldMetadataHelper {
         }
         
         /**
-         * Add the current date and count to the current target map for the current datatype.
+         * Add the current aggregated counts to the current target map for the given datatype.
          */
-        private void addToTargetMap(String datatype, Date date, Value value) {
-            Long count = SummingCombiner.VAR_LEN_ENCODER.decode(value.get());
-            SortedMap<Date,Long> datesToCounts = targetMap.computeIfAbsent(datatype, (k) -> new TreeMap<>());
-            datesToCounts.merge(date, count, Long::sum);
+        private void addToTargetMap(String datatype, DateFrequencyMap aggregatedCounts) {
+            for (Entry<String,Frequency> entry : aggregatedCounts.entrySet()) {
+                Date date = DateHelper.parse(entry.getKey());
+                FieldCount fieldCount = getFieldCount(targetMap, datatype, date);
+                fieldCount.increment(entry.getValue().getValue());
+            }
         }
         
-        private void addToTargetMap(String datatype, Value value) throws IOException {
-            DateFrequencyMap map = new DateFrequencyMap(value.get());
-            SortedMap<Date,Long> datesToCounts = targetMap.computeIfAbsent(datatype, (k) -> new TreeMap<>());
-            for (Entry<String,Frequency> entry : map.entrySet()) {
-                Date date = DateHelper.parse(entry.getKey());
-                datesToCounts.merge(date, entry.getValue().getValue(), Long::sum);
+        
+        /**
+         * Add the current date and count to the current target map for the given datatype.
+         */
+        private void addToTargetMap(String datatype, Date date, long count, Boolean boundaryValue) {
+            FieldCount fieldCount = getFieldCount(targetMap, datatype, date);
+            fieldCount.increment(count);
+            if (boundaryValue != null) {
+                fieldCount.setBoundaryValue(boundaryValue);
             }
+            
+            // we need to ensure we have a frequency entry if a boundary so that we will catch this when finding holes
+            getFieldCount(frequencyMap, datatype, date);
+        }
+        
+        /**
+         * Return the field count entry from the specified map. A new entry is added to the map if missing
+         *
+         * @param datatype
+         * @param date
+         * @return The field count. Never null
+         */
+        private FieldCount getFieldCount(Map<String,SortedMap<Date,FieldCount>> map, String datatype, Date date) {
+            SortedMap<Date,FieldCount> datesToCounts = map.computeIfAbsent(datatype, (k) -> new TreeMap<>());
+            FieldCount fieldCount = datesToCounts.get(date);
+            if (fieldCount == null) {
+                fieldCount = new FieldCount();
+                datesToCounts.put(date, fieldCount);
+            }
+            return fieldCount;
         }
         
         /**
@@ -1343,7 +1685,7 @@ public class AllFieldMetadataHelper {
          *            the field name
          */
         private void findFieldIndexHoles(String fieldName) {
-            Multimap<String,Pair<Date,Date>> indexHoles = fieldIndexHoles.computeIfAbsent(fieldName, (k) -> HashMultimap.create());
+            Multimap<String,Pair<Date,Date>> indexHoles = fieldIndexHoles.computeIfAbsent(fieldName, k -> HashMultimap.create());
             // Compare the entries for each datatype to identify any and all field index holes.
             for (String datatype : frequencyMap.keySet()) {
                 // At least one corresponding index row was seen. Compare the entries to identify any index holes.
@@ -1354,7 +1696,7 @@ public class AllFieldMetadataHelper {
                 } else {
                     // No corresponding index rows were seen for any of the frequency rows. Each date is an index hole. Add a date range of the earliest date to
                     // the latest date.
-                    SortedMap<Date,Long> entryMap = frequencyMap.get(datatype);
+                    SortedMap<Date,FieldCount> entryMap = frequencyMap.get(datatype);
                     indexHoles.put(datatype, Pair.of(entryMap.firstKey(), entryMap.lastKey()));
                 }
             }
@@ -1369,7 +1711,7 @@ public class AllFieldMetadataHelper {
          *            the index entries
          * @return a set of index holes, possibly empty, but never null
          */
-        private Set<Pair<Date,Date>> getIndexHoles(SortedMap<Date,Long> frequencyMap, SortedMap<Date,Long> indexMap) {
+        private Set<Pair<Date,Date>> getIndexHoles(SortedMap<Date,FieldCount> frequencyMap, SortedMap<Date,FieldCount> indexMap) {
             Set<Pair<Date,Date>> indexHoles = new HashSet<>();
             Date holeStartDate = null;
             Date prevDate = null;
@@ -1377,8 +1719,21 @@ public class AllFieldMetadataHelper {
             for (Date date : frequencyMap.keySet()) {
                 // There is a corresponding index entry for the current date.
                 if (indexMap.containsKey(date)) {
-                    // The count for the current index entry meets the minimum threshold.
-                    if (meetsMinThreshold(frequencyMap.get(date), indexMap.get(date))) {
+                    FieldCount indexCount = indexMap.get(date);
+                    
+                    // if this is a boundary marker, then replace/clear map thus far
+                    if (indexCount.isBoundary()) {
+                        // all holes thus far are to be replaced
+                        indexHoles.clear();
+                        // if not indexed, then start a hole since the beginning
+                        if (!indexCount.getBoundaryValue()) {
+                            holeStartDate = frequencyMap.firstKey();
+                        } else {
+                            // else indexed since the beginning
+                            holeStartDate = null;
+                        }
+                    } else if (meetsMinThreshold(frequencyMap.get(date), indexCount)) {
+                        // The count for the current index entry meets the minimum threshold.
                         // The previous entry was part of an index hole. Capture the index hole range.
                         if (holeStartDate != null) {
                             indexHoles.add(Pair.of(holeStartDate, prevDate));
@@ -1420,12 +1775,12 @@ public class AllFieldMetadataHelper {
          *            the index count
          * @return true if the threshold is met, or false otherwise
          */
-        private boolean meetsMinThreshold(Long frequencyCount, Long indexCount) {
-            if (indexCount >= frequencyCount) {
+        private boolean meetsMinThreshold(FieldCount frequencyCount, FieldCount indexCount) {
+            if (indexCount.getCount() >= frequencyCount.getCount()) {
                 return true;
             }
             
-            double percentage = indexCount.doubleValue() / frequencyCount;
+            double percentage = (double) (indexCount.getCount()) / frequencyCount.getCount();
             return percentage >= minThreshold;
         }
         
@@ -1453,6 +1808,15 @@ public class AllFieldMetadataHelper {
         }
     }
     
+    /**
+     * Get a key composed of the accumulo instance ID and the metadata table name
+     *
+     * @param instanceID
+     *            the accumulo instance id
+     * @param metadataTableName
+     *            the metadata table name
+     * @return a key
+     */
     private static String getKey(String instanceID, String metadataTableName) {
         StringBuilder builder = new StringBuilder();
         builder.append(instanceID).append('\0');
@@ -1460,13 +1824,42 @@ public class AllFieldMetadataHelper {
         return builder.toString();
     }
     
+    /**
+     * Get a key
+     *
+     * @param helper
+     *            an instance of an {@link AllFieldMetadataHelper}
+     * @return a key
+     */
     private static String getKey(AllFieldMetadataHelper helper) {
-        return getKey(helper.accumuloClient.instanceOperations().getInstanceID(), helper.metadataTableName);
+        return getKey(helper.accumuloClient.instanceOperations().getInstanceId().canonical(), helper.metadataTableName);
     }
     
+    /**
+     * ToString
+     *
+     * @return a string
+     */
     @Override
     public String toString() {
         return getKey(this);
     }
     
+    /**
+     * Simple 'get or create' method for the TypeFactory
+     *
+     * @return a TypeFactory.
+     */
+    protected TypeFactory getTypeFactory() {
+        if (typeFactory == null) {
+            
+            // check for configured size and TTL
+            if (typeCacheSize != -1 && typeCacheExpirationInMinutes != -1) {
+                typeFactory = new TypeFactory(typeCacheSize, typeCacheExpirationInMinutes);
+            } else {
+                typeFactory = new TypeFactory();
+            }
+        }
+        return typeFactory;
+    }
 }
